switching to using hibernate